include/vcl/print.hxx
@@ -228,6 +228,7 @@ public:
     bool                        SetPaperBin( sal_uInt16 nPaperBin );
     sal_uInt16                  GetPaperBin() const;
     sal_uInt16                  GetPaperBinBySourceIndex(sal_uInt16 nPaperSource) const;
+    sal_uInt16                  GetSourceIndexByPaperBin(sal_uInt16 nPaperBin) const;
     void                        SetPaper( Paper ePaper );
     bool                        SetPaperSizeUser( const Size& rSize );
     /** @return The paper format of the printer's current "jobsetup". Note that if PAPER_USER the actual size can be anything. */
